--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -45,5 +45,5 @@
     "gh-pages": "^6.1.1",
     "prettier": "3.1.1"
   },
-  "homepage": "http://craigyeoman.github.io/karlaleland"
+  "homepage": "https://craigyeoman.github.io/karlaleland"
 }
